--- a/ecommerce/src/assets/Navbar.css
+++ b/ecommerce/src/assets/Navbar.css
@@ -1,66 +1,109 @@
 .container {
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.logo {
+  margin-right: 20px; /* Ajusta el espaciado entre el logo y el contenido */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.containerLogo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.nav-link {
+  margin-right: 10px; /* Ajusta el espaciado entre los elementos de navegación */
+}
+
+.categories-container {
+  position: relative;
+  margin: 10px; /* Ajusta el espaciado entre el enlace de categorías y los demás elementos */
+
+}
+
+.categories-container a {
+  cursor: pointer;
+}
+
+.nav-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  background-color: #fff; /* Ajusta el color de fondo de la lista */
+  border: 1px solid #ccc; /* Ajusta el estilo del borde de la lista */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ajusta la sombra de la lista */
+}
+
+.categories-container:hover .nav-list {
+  display: block;
+}
+
+.nav-list li {
+  margin-bottom: 8px; /* Ajusta el espaciado entre los elementos de la lista */
+}
+
+.user-container {
+  margin-left: 8px; /* Ajusta el espaciado entre el icono de usuario y los demás elementos */
+}
+
+/* Media Queries para dispositivos móviles */
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
   }
-  
+
   .logo {
-    margin-right: 20px; /* Ajusta el espaciado entre el logo y el contenido */
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    margin-right: 0;
+    margin-bottom: 20px;
+    justify-content: center;
   }
-  .containerLogo{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  
+
   .nav-container {
-    display: flex;
+    flex-direction: column;
     align-items: center;
   }
-  
+
   .nav-link {
-    margin-right: 10px; /* Ajusta el espaciado entre los elementos de navegación */
+    margin-right: 0;
+    margin-bottom: 10px;
   }
-  
+
   .categories-container {
-    position: relative;
-    margin-right: 20px; /* Ajusta el espaciado entre el enlace de categorías y los demás elementos */
+    margin-right: 0;
+    margin-bottom: 20px;
   }
-  
-  .categories-container a {
-    cursor: pointer;
-  }
-  
+
   .nav-list {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    display: none;
-    list-style: none;
-    margin: 0;
-    padding: 10px;
-    background-color: #fff; /* Ajusta el color de fondo de la lista */
-    border: 1px solid #ccc; /* Ajusta el estilo del borde de la lista */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ajusta la sombra de la lista */
-  }
-  
-  .categories-container:hover .nav-list {
+    position: static;
     display: block;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding: 0;
+    box-shadow: none;
   }
-  
+
   .nav-list li {
-    margin-bottom: 8px; /* Ajusta el espaciado entre los elementos de la lista */
+    margin-bottom: 5px;
   }
-  
+
   .user-container {
-    margin-left: 8px; /* Ajusta el espaciado entre el icono de usuario y los demás elementos */
+    margin-top: 8px;
   }
-  .burguer{
-      @media (min-width: 768px) {
-      display: none;
-    
-  }
-  }
+}
