--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -185,16 +185,10 @@ header {
 	padding: 15px 10px;
 	cursor: pointer;
 }
-
 .cart-empty {
 	padding: 20px;
 	text-align: center;
 }
-
-.hidden {
-	display: none;
-}
-
 .btn-clear-all {
 	border: none;
 	background-color: #000;
@@ -214,4 +208,30 @@ header {
 .btn-clear-all:hover{
   background-color: #333;
   transform: scale(1.03);
-  border-radius: 0;}
+  border-radius: 0;
+}
+/* Responsive */
+@media screen and (max-width: 768px) {
+	header {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.container-cart-products {
+		width:400%;
+		justify-content: center;
+	}
+
+	.container-items {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.cart-total {
+		flex-direction: column;
+		text-align: center;
+	}
+
+	.btn-clear-all {
+		border-radius: 10px;
+	}
+}
