--- a/ecommerce/src/assets/Navbar.css
+++ b/ecommerce/src/assets/Navbar.css
@@ -61,6 +61,12 @@
   margin-left: 8px; /* Ajusta el espaciado entre el icono de usuario y los demás elementos */
 }
 
+.home-link{
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
+}
+
 /* Media Queries para dispositivos móviles */
 @media only screen and (max-width: 768px) {
   .container {
