--- a/ecommerce/src/assets/footer.css
+++ b/ecommerce/src/assets/footer.css
@@ -1,6 +1,6 @@
 .footer{
     margin-top: 2rem;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     width: 100%;
     background-color: #000000;
     color: #ffffff;
@@ -33,4 +33,14 @@
 .icono-footer{
     font-size: 2rem;
     margin: 0 1rem;
+}
+
+@media only screen and (max-width: 900px) {
+    .footer{
+        flex-direction: column;
+    }
+
+    .seccion-footer{
+        width: 100%;
+    }
 }
