--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -1,6 +1,8 @@
 /* Globales */
 @import url('./assets/productList.css');
 @import url('./assets/Navbar.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *::after,
 *::before,
 * {
@@ -9,7 +11,8 @@
 	box-sizing: border-box;
 }
 
-main, header {
+main,
+header {
 	margin: 0 auto;
 	max-width: 1200px;
 	font-family: 'Lato';
@@ -27,4 +30,10 @@ header {
 	justify-content: space-between;
 	padding: 30px 0 40px 0;
 }
-
+h2{
+	font-family: 'Montserrat', sans-serif;
+}
+p{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+}
