--- a/ecommerce/src/assets/productList.css
+++ b/ecommerce/src/assets/productList.css
@@ -7,7 +7,7 @@
 	top: 55%;
 	right: 0;
 
-	background-color: #000;
+	background-color:#27374D;
 	color: #fff;
 	width: 25px;
 	height: 25px;
@@ -27,7 +27,7 @@
 	top: 50px;
 	right: 0;
 
-	background-color: #fff;
+    background-color:#27374D;
 	width: 400px;
 	z-index: 1;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -45,10 +45,12 @@
 	width: 40px;
 	height: 40px;
 	stroke: #000;
+	text-decoration: none;
 }
 
 .icon-cart:hover {
 	cursor: pointer;
+	text-decoration: none;
 }
 
 .info-cart-product {
@@ -68,16 +70,19 @@
 
 .icon-cart:hover {
 	cursor: pointer;
+	text-decoration: none;
 }
 
 
 .precio-producto-carrito {
+	color: #fff;
 	font-weight: 700;
 	font-size: 20px;
 	margin-left: 10px;
 }
 
 .cantidad-producto-carrito {
+	color: white;
 	font-weight: 400;
 	font-size: 20px;
 }
@@ -98,9 +103,11 @@
 	align-items: center;
 	padding: 20px 0;
 	gap: 20px;
+	color: white;
 }
 
 .cart-total h3 {
+	color: white;
 	font-size: 20px;
 	font-weight: 700;
 }
@@ -119,6 +126,8 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
+	height: 100%;
+	
 }
 
 .item {
@@ -166,6 +175,30 @@
 	padding: 15px 10px;
 	cursor: pointer;
 }
+form a {
+    position: relative;
+    display: inline-block;
+    padding:  15px 10px;
+    color: #03e9f4;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px
+	
+  }
+   
+  form button:hover {
+    background: #03e9f4;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 100px #03e9f4;
+  }
 
 .cart-empty {
 	padding: 20px;
@@ -224,11 +257,17 @@
 		align-items: center;
 	}
 
-	.container-cart-products {
-		
-		width: 0 auto;
-		justify-content: center;
-	}
+.container-cart-products {
+  
+  top: 260px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #27374D;
+  width: 300px;
+  padding: 20px;
+  color: #FFF;
+  text-align: center;
+}
 
 	.container-items {
 		grid-template-columns: repeat(2, 1fr);
