--- a/ecommerce/src/assets/Navbar.css
+++ b/ecommerce/src/assets/Navbar.css
@@ -1,7 +1,13 @@
-.container {
+@import url("./variables.css");
+
+.container{
+  background-color: var(--color-principal);
+}
+
+.container-centre {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .logo {
@@ -60,21 +66,16 @@
   margin-left: 8px; /* Ajusta el espaciado entre el icono de usuario y los demás elementos */
 }
 
-.home  {
+.home, .user  {
   font-size: 40px;
   margin: 10px;
 }
-.user  {
+.user, .home-link  {
   text-decoration: none;
-  color: black;
-  font-size: 40px;
-
-}
-.home-link{
-  text-decoration: none;
-  color: #000;
+  color: white;
   cursor: pointer;
 }
+
 
 /* Media Queries para dispositivos móviles */
 @media only screen and (max-width: 768px) {
