--- a/ecommerce/src/assets/productList.css
+++ b/ecommerce/src/assets/productList.css
@@ -1,3 +1,5 @@
+@import url("./variables.css");
+
 .container-icon {
 	position: relative;
 }
@@ -6,12 +8,10 @@
 	position: absolute;
 	top: 55%;
 	right: 0;
-
 	background-color: #000;
 	color: #fff;
 	width: 25px;
 	height: 25px;
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
