--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -1,7 +1,6 @@
 /* Globales */
 @import url('./assets/productList.css');
 @import url('./assets/Navbar.css');
-@import url('./assets/variables.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *::after,
@@ -12,12 +11,12 @@
 	box-sizing: border-box;
 }
 
-main,
-.container-centre {
+main
+ {
 	margin: 0 auto;
 	max-width: 1200px;
 	font-family: 'Lato';
-	color: #333;	
+	color: #333;
 }
 
 
@@ -26,7 +25,7 @@ img {
 }
 
 /* Header */
-.container-centre {
+header {
 	display: flex;
 	justify-content: space-between;
 	padding: 30px 0 40px 0;
