--- a/ecommerce/src/assets/Navbar.css
+++ b/ecommerce/src/assets/Navbar.css
@@ -1,7 +1,9 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+  padding: 10px;
+  margin: 0 30vh;
 }
 
 .logo {
